tests/pos/new-with.scala
val x = new with { } // error